--- a/_posts/CSS/2022-12-14-css查漏补缺.md
+++ b/_posts/CSS/2022-12-14-css查漏补缺.md
@@ -49,3 +49,5 @@ line-height指的是两行文字基线之间的距离。
 
 CSS中起高度作用的是height和line-height。空div插入文字，撑起高度的是 line-height 而不是 font-size。line-box 会取 inline-box 元素中 line-height 值最高的为 line-height。
 
+## position
+position: fixed 能够相对于浏览器窗口放置有一个条件，那就是不能有任何祖先元素设置了 transform、perspective 或者 filter 样式属性。
