--- a/_posts/Vue/2023-2-24-Vue3.md
+++ b/_posts/Vue/2023-2-24-Vue3.md
@@ -10,6 +10,54 @@ tags:
 - Vue
 ---
 # Vue3
+## script
+### provide
+为子孙组件提供数据，避免多层嵌套props。应用实例和组件都支持此方法。
+
+建议尽可能将任何对响应式状态的变更都保持在供给方组件中。注入名推荐使用symbol。
+
+```javascript
+component.provide(string or symbol, provided value can be of any type)
+
+// app-level provide
+app.provide()
+```
+
+```javascript
+export default {
+  provide: {
+    message: 'hello'
+  }
+}
+
+// script setup
+import { provide } from 'vue';
+
+provide('message', 'hello');
+
+// setup
+// If not using <script setup>, provide() must be called synchronously inside setup()
+export default {
+  setup () {
+    provide('message', 'hello');
+  }
+}
+```
+
+### inject
+```javascript
+inject(string | symbol, defaultValue)
+```
+
+If the provided value is a ref, it will not be automatically unwrapped. This retains reactivity to the provider.
+
+If not using `<script setup>`, `inject()` should only be called synchronously inside `setup()`.
+
+在一些场景中，默认值可能需要通过调用一个函数或初始化一个类来取得。为了避免在用不到默认值的情况下进行不必要的计算或产生副作用，我们可以使用工厂函数来创建默认值：
+```javascript
+const value = inject('key', () => new ExpensiveClass())
+```
+
 ## setup
 要在组件模板中使用响应式状态，需要在 setup() 函数中定义并返回。
 ```javascript
@@ -33,6 +81,28 @@ export default {
 
 与普通的 `<script>` 只在组件被首次引入的时候执行一次不同，<script setup> 中的代码会在组件创建之前, props 被解析之后执行。在 setup 中你应该
 避免使用 this，因为它不会找到组件实例。
+
+### 特性
+1. 支持顶层await，代码会被编译成 `async setup()`
+2. setup代替了选项式中的beforeCreate和created
+3. 不允许父组件通过ref获取数据，script setup必须用defineExpose，setup选项使用第二个参数的expose。
+4. 可以返回一个 render function，使用setup中的数据。
+5. 可以和包含选项式API的script同时使用。可以用于声明setup中不支持的选项，声明命名导出和运行副作用或者创建只需要执行一次的对象。
+6. 可以和普通 script 一起使用。
+```vue
+<script>
+// 运行只需要在模块作用域执行一次的副作用，或是创建单例对象。
+runSideEffectOnce()
+
+// 声明script setup不支持的选项，其内容会被处理后放入原组件声明字段。
+  export default {
+    name: "MyComponent",
+    inheritAttrs:false,
+    customOptions:{}
+  }
+  // 声明模块的具名导出 (named exports)。
+</script>
+```
 
 ### 顶层的绑定会被暴露给模板
 当使用 `<script setup>` 的时候，任何在 `<script setup>` 声明的顶层的绑定 (包括变量，函数声明，以及 import 引入的内容) 都能在模板中直接使用：
@@ -71,14 +141,819 @@ defineProps 接收与 props 选项相同的值，defineEmits 也接收 emits 选
 传入到 defineProps 和 defineEmits 的选项会从 setup 中提升到模块的范围。因此，传入的选项不能引用在 setup 范围中声明的局部变量。
 这样做会引起编译错误。但是，它可以引用导入的绑定，因为它们也在模块范围内。
 
-## transition-group
-`<transition-group>` 不再默认渲染根元素，但仍然可以用 tag attribute 创建根元素。
+## 选项式API
+### data
+以 _ 或 $ 开头的属性将不会被组件实例代理，因为它们可能和 Vue 的内置属性、API 方法冲突。你必须以 `this.$data._property` 的方式访问它们。
 
-## 侦听
-当侦听一个数组时，只有当数组被替换时才会触发回调。如果你需要在数组被改变时触发回调，必须指定 deep 选项
+注意，如果你为 data中的属性使用了一个箭头函数，则 this 将不会指向该组件实例，不过你仍然可以通过该函数的第一个参数来访问实例
+### props
+在 Vue 中，所有的组件 props 都需要被显式声明。组件 props 可以通过两种方式声明：
+- 使用字符串数组的简易形式。
+- 使用对象的完整形式。支持type, default, required和validator
+
+### emits
+使用字符串数组的简易形式。
+
+使用对象的完整形式。该对象的每个属性键是事件的名称，值是 null 或一个验证函数。验证函数能接收到事件触发传递的参数。验证函数应返回布尔值，以表明事件参数是否通过了验证。
+
+注意，emits 选项会影响一个监听器被解析为组件事件监听器，还是原生 DOM 事件监听器。被声明为组件事件的监听器不会被透传到组件的根元素上，且将从组件的 `$attrs` 对象中移除。
+
+### computed
+该选项接收一个对象，其中键是计算属性的名称，值是一个计算属性 getter，或一个具有 get 和 set 方法的对象。
+
+所有的 getters 和 setters 会将它们的 this 上下文自动绑定为组件实例。
+
+注意，如果你为一个计算属性使用了箭头函数，则 this 不会指向该组件实例，不过你仍然可以通过该函数的第一个参数来访问实例，和data中一样。
+
+### methods
+方法不要用箭头函数，因为它们不能通过 this 访问组件实例。
+
+### watch
+值支持methods中方法名称字符串，函数或包含immediate，deep，flush和onTrack / onTrigger的对象。
+
+- onTrack 将在响应属性或引用作为依赖项被跟踪时被调用。
+- onTrigger 将在侦听器回调被依赖项的变更触发时被调用。
+
+声明侦听器回调时避免使用箭头函数，因为它们将无法通过 this 访问组件实例。
+
+### expose
+默认情况下，当通过 `$parent`、`$root` 或模板引用访问时，组件实例将向父组件暴露所有的实例属性。这可能不是我们希望看到的，因为组件很可能拥有一些
+应保持私有的内部状态或方法，以避免紧耦合。
+
+expose 选项值应当是一个包含要暴露的属性名称字符串的数组。当使用 expose 时，只有显式列出的属性将在组件实例上暴露。
+
+expose 仅影响用户定义的属性——它不会过滤掉内置的组件实例属性。
+
+## 组合式函数
+“组合式函数”(Composables) 是一个利用 Vue 组合式 API 来封装和复用有状态逻辑的函数。函数内返回管理的状态。通过抽取组合式函数改善代码结构。
+- 组合式函数约定用驼峰命名法命名，并以“use”作为开头。
+- 输入参数，兼容ref而不只是原始值。unref()。
+- 应始终返回一个包含多个 ref 的普通的非响应式对象。方便消费者解构后也保持响应式。
+- 在setup或setup script中同步调用，特殊情况可在生命周期钩子中调用。
 
 ## template 标签
 没有特殊指令的标记 (v-if/else-if/else、v-for 或 v-slot) 的 `<template>` 现在被视为普通元素，并将渲染为原生的 `<template>` 元素，而不是渲染其内部内容。
 
 vue2中，当挂载一个具有 template 的应用时，被渲染的内容（传入的元素）会替换我们要挂载的目标元素。vue3，被渲染的应用会作为子元素插入，从而替换目标元素的 innerHTML。
 
+## API
+### reactive
+使用 reactive() 函数创建一个深层响应式对象或数组，仅对对象类型有效，返回代理对象。响应式对象内的嵌套对象依然是代理。
+
+对同一个原始对象调用 reactive() 会总是返回同样的代理对象，而对一个已存在的代理对象调用 reactive() 会返回其本身。
+
+一个响应式对象也将深层地解包任何 ref 属性，同时保持响应性。There is no ref unwrapping performed when the ref is accessed as an 
+element of a reactive array or a native collection type like Map.
+
+```javascript
+const proxy = reactive({})
+
+const raw = {}
+proxy.nested = raw
+// 深层响应式
+console.log(proxy.nested === raw) // false
+
+// 不会执行 ref 的解包。
+const books = reactive([ref('Vue 3 Guide')])
+// 这里需要 .value
+console.log(books[0].value)
+const map = reactive(new Map([['count', ref(0)]]))
+// 这里需要 .value
+console.log(map.get('count').value)
+
+//  将一个 ref 赋值给为一个 reactive 属性时，该 ref 会被自动解包：
+const count = ref(1)
+const obj = reactive({})
+
+obj.count = count
+
+console.log(obj.count) // 1
+console.log(obj.count === count.value) // true
+```
+
+### shallowReactive
+shallowReactive可以直接创建一个浅层响应式对象。
+
+### readonly shallowReadonly
+只读代理是深层的：对任何嵌套属性的访问都将是只读的。它的 ref 解包行为与 reactive() 相同，但解包得到的值是只读的。
+
+### ref
+允许我们创建可以使用任何值类型的响应式 ref，`ref()` 将传入参数的值包装为一个带 .value 属性的 ref 对象。
+
+如果将一个对象赋值给 ref，那么这个对象将通过 `reactive()` 转为具有深层次响应式的对象。这也意味着如果对象中包含了嵌套的 ref，它们将被深层地解包。若要避免这种深层次的转换，请使用 shallowRef() 来替代。
+
+```javascript
+const objectRef = ref({ count: 0 })
+
+// 这是响应式的替换
+objectRef.value = { count: 1 }
+```
+
+#### 解构不丢失响应性
+ref 被传递给函数或是从一般对象上被解构时，不会丢失响应性：
+```javascript
+const obj = {
+  foo: ref(1),
+  bar: ref(2)
+}
+
+// 该函数接收一个 ref
+// 需要通过 .value 取值
+// 但它会保持响应性
+callSomeFunction(obj.foo)
+
+// 仍然是响应式的
+const { foo, bar } = obj
+```
+
+#### ref unwrapping in template
+ref 是模板渲染上下文的顶层属性时自动“解包”，不需要使用 .value。
+
+注意：unwrapping only applies if the ref is top-level ref. 例如，object 是 top-level ref，但 object.foo 不是。需要先解构出 foo 
+这个ref对象，才能在模板中直接使用foo，而不需要.value。
+
+#### ref in reactive
+ref 在 reactive 中作为属性，会自动解构，无需通过 `.value` 使用。但是当 ref 作为响应式数组或像 Map 这种原生集合类型的元素被访问时，不会进行解包。
+
+### computed
+computed 方法期望接收一个 getter 函数，返回值为一个计算属性 ref。 也可以传入一个包含get和set函数的对象，允许修改计算属性。
+
+#### Computed Debugging
+We can debug computed properties by passing `computed` a second options object with `onTrack` and `onTrigger` callback.
+
+- onTrack will be called when a reactive property or ref is tracked as a dependency.
+- onTrigger will be called when the watcher callback is triggered by the mutation of a dependency.
+
+Both callbacks will receive debugger events in the [same format](https://vuejs.org/guide/extras/reactivity-in-depth.html#debugger-event) as component debug hooks.
+
+> only work in development mode
+
+### watch
+第一个参数可以是不同形式的“数据源”：它可以是一个 ref (包括计算属性)、一个响应式对象、一个 getter 函数、或多个数据源组成的数组。
+
+watch不能侦听响应式对象的属性，应该用一个getter函数代替。
+
+```javascript
+const x = ref(0)
+
+// 单个 ref
+watch(x, (newX) => {
+  console.log(`x is ${newX}`)
+})
+
+const obj = reactive({ count: 0 })
+
+// 错误，因为 watch() 得到的参数是一个 number
+watch(obj.count, (count) => {
+  console.log(`count is: ${count}`)
+})
+// 提供一个 getter 函数
+watch(
+  () => obj.count,
+  (count) => {
+    console.log(`count is: ${count}`)
+  }
+)
+```
+
+#### 深层侦听
+直接给 watch() 传入一个响应式对象，会隐式地创建一个深层侦听器——该回调函数在所有嵌套的变更时都会被触发，性能消耗大，只在必要时使用。
+```javascript
+const obj = reactive({ count: 0 })
+
+watch(obj, (newValue, oldValue) => {
+  // 在嵌套的属性变更时触发
+  // 注意：`newValue` 此处和 `oldValue` 是相等的
+  // 因为它们是同一个对象！
+})
+
+obj.count++
+```
+
+相比之下，一个返回响应式对象的 getter 函数，只有在返回不同的对象时，才会触发回调：
+```javascript
+// 仅在someObject被替换时才触发
+watch(
+  () => state.someObject, 
+  (newValue, oldValue) => {
+  },
+<!--你也可以给上面这个例子显式地加上 deep 选项，强制转成深层侦听器：-->
+   { deep: true }
+)
+```
+
+### watchEffect
+`watch()` 是懒执行的：仅当数据源变化时，才会执行回调。
+
+`watchEffect()` 会立即执行一遍回调函数，如果这时函数产生了副作用，Vue 会自动追踪副作用的依赖关系，自动分析出响应源（类似计算属性）。
+会在副作用发生期间追踪依赖。它会在同步执行过程中，自动追踪所有能访问到的响应式属性。
+
+tips：watchEffect 仅会在其同步执行期间，才追踪依赖。在使用异步回调时，只有在第一个 await 正常工作前访问到的属性才会被追踪。（异步代码不会被追踪依赖）
+
+#### 回调的触发时机
+当你更改了响应式状态，它可能会同时触发 Vue 组件更新和侦听器回调。
+
+默认情况下，用户创建的侦听器回调，都会在 Vue 组件更新之前被调用。这意味着你在侦听器回调中访问的 DOM 将是被 Vue 更新之前的状态。
+
+如果想在侦听器回调中能访问被 Vue 更新之后的DOM，你需要指明第二个参数options的 flush: 'post' 选项。
+
+后置刷新的 watchEffect() 有个更方便的别名 watchPostEffect()：
+
+### 停止侦听器
+在 `setup()` 或 `<script setup>` 中用同步语句创建的侦听器，会自动绑定到宿主组件实例上，并且会在宿主组件卸载时自动停止。
+
+尽量使用同步方式创建侦听器。
+
+如果用异步回调创建一个侦听器，那么它不会绑定到当前组件上，你必须手动停止它，以防内存泄漏。要手动停止一个侦听器，请调用 watch 或 watchEffect 返回的函数。
+
+## template
+### ref
+通过同名 ref 获得模板引用，将元素的 ref 属性设置为同名ref。
+
+#### v-for中的模板引用
+当在 v-for 中使用模板引用时，对应的 ref 中包含的值是一个数组，它将在元素被挂载后包含对应整个列表的所有元素。
+
+注意：ref 数组并不保证与源数组相同的顺序。
+
+#### 函数ref
+ref attribute 还可以绑定为一个函数，会在每次组件更新时都被调用。该函数会收到元素引用作为其第一个参数。
+
+注意：当绑定的元素被卸载时，函数也会被调用一次，此时的 el 参数会是 null。
+
+### class
+对于只有一个根元素的组件，当你使用了该组件并传入class attribute 时，这些 class 会被添加到根元素上，并与该组件的根元素上已有的 class 合并。
+
+如果你的组件有多个根元素，你将需要指定哪个根元素来接收这个 class。你可以通过组件的 $attrs 属性来实现指定：
+```vue
+<p :class="$attrs.class">Hi!</p>
+```
+
+### style样式多值
+你可以对一个样式属性提供多个 (不同前缀的) 值，举例来说：
+```vue
+<div :style="{ display: ['-webkit-box', '-ms-flexbox', 'flex'] }"></div>
+```
+数组仅会渲染浏览器支持的最后一个值。在这个示例中，在支持不需要特别前缀的浏览器中都会渲染为 display: flex。
+
+### v-if和v-for同时使用
+当 v-if 和 v-for 同时存在于一个元素上的时候，v-if 会首先被执行。
+
+### v-for
+可以在定义 v-for 的变量别名时使用解构，和解构函数参数类似：
+```vue
+<li v-for="{ message } in items">
+  {{ message }}
+</li>
+
+<!-- 有 index 索引时 -->
+<li v-for="({ message }, index) in items">
+  {{ message }} {{ index }}
+</li>
+```
+
+### 事件修饰符
+- stop
+- prevent
+- self
+- capture
+- once
+- passive
+
+.capture、.once 和 .passive 修饰符与原生 addEventListener 事件相对应。（在某不支持options的addEventListener的浏览器中，第三个参数是useCapture，设置useCapture为true和passive为true一样）
+
+使用修饰符时需要注意调用顺序，因为相关代码是以相同的顺序生成的。
+
+因此使用 @click.prevent.self 会阻止元素及其子元素的所有点击事件的默认行为而 @click.self.prevent 则只会阻止对元素本身的点击事件的默认行为。
+
+```vue
+<!-- 添加事件监听器时，使用 `capture` 捕获模式 -->
+<!-- 例如：指向内部元素的事件，在被内部元素处理前，先被外部处理 -->
+<div @click.capture="doThis">...</div>
+
+<!-- 点击事件最多被触发一次 -->
+<a @click.once="doThis"></a>
+
+<!-- 滚动事件的默认行为 (scrolling) 将立即发生而非等待 `onScroll` 完成，避免阻塞浏览器默认滚动行为-->
+<!-- 以防其中包含 `event.preventDefault()` -->
+<div @scroll.passive="onScroll">...</div>
+```
+
+### 按键修饰符
+以直接使用 (KeyboardEvent.key)[https://developer.mozilla.org/zh-CN/docs/Web/API/UI_Events/Keyboard_event_key_values] 暴露的按键名称作为修饰符，但需要转为 kebab-case 形式。
+
+Vue 为一些常用的按键提供了别名：
+- .enter
+- .tab
+- .delete (捕获“Delete”和“Backspace”两个按键)
+- .esc
+- .space
+- .up
+- .down
+- .left
+- .right
+
+### 系统按键修饰符
+- .ctrl
+- .alt
+- .shift
+- .meta
+- .exact。允许控制触发一个事件所需的确定组合的系统按键修饰符。
+
+```vue
+<!-- 当按下 Ctrl 时，即使同时按下 Alt 或 Shift 也会触发 -->
+<button @click.ctrl="onClick">A</button>
+
+<!-- 仅当按下 Ctrl 且未按任何其他键时才会触发 -->
+<button @click.ctrl.exact="onCtrlClick">A</button>
+
+<!-- 仅当没有按下任何系统按键时触发 -->
+<button @click.exact="onClick">A</button>
+```
+
+系统按键修饰符和常规按键不同。与 keyup 事件一起使用时，该按键必须在事件发出时处于按下状态。
+```vue
+<!--仅当 input focus 且 alt 处于按下状态时，按下其他键并松开才会触发回调-->
+<input type="text" @keyup.alt="alertFn">
+```
+
+### 鼠标按键修饰符
+- .left
+- .right
+- .middle
+
+这些修饰符将处理程序限定为由特定鼠标按键触发的事件。
+
+### 多选框绑定同一变量
+我们也可以将多个复选框绑定到同一个数组或集合的值，值按勾选顺序排列：
+```html
+<div>Checked names: {{ checkedNames }}</div>
+
+<input type="checkbox" id="jack" value="Jack" v-model="checkedNames">
+<label for="jack">Jack</label>
+
+<input type="checkbox" id="john" value="John" v-model="checkedNames">
+<label for="john">John</label>
+
+<input type="checkbox" id="mike" value="Mike" v-model="checkedNames">
+<label for="mike">Mike</label>
+```
+
+```javascript
+const checkedNames = ref([])
+```
+
+### select 要有空选项
+如果 v-model 表达式的初始值不匹配任何一个选择项，<select> 元素会渲染成一个“未选择”的状态。
+
+在 iOS 上，这将导致用户无法选择第一项，因为 iOS 在这种情况下不会触发一个 change 事件。因此，我们建议提供一个value为空的禁用选项。
+
+### true-value和false-value
+true-value 和 false-value 是 Vue 特有的 attributes，仅支持和 v-model 配套使用。`v-model` 绑定的变量值会在选中和取消选中时设置为 `true-value` 和 `false-value` 设置的值。
+你同样可以通过 v-bind 将其绑定为其他动态值。
+
+### 表单输入绑定事件修饰符
+#### .lazy
+默认情况下，v-model 会在每次 input 事件后更新数据 ([IME 拼字阶段](https://cn.vuejs.org/guide/essentials/forms.html#vmodel-ime-tip)的状态例外)。
+你可以添加 lazy 修饰符来改为在每次 change 事件后更新数据。
+
+#### .number
+可以在 v-model 后添加 .number 修饰符来管理输入：如果该值无法被 parseFloat() 处理，那么将返回原始值。
+
+`type="number"` 自动启用。
+
+#### .trim
+如果你想要默认自动去除用户输入内容中两端的空格，你可以在 v-model 后添加 .trim 修饰符：
+
+## 事件
+事件名如果和原生事件冲突，则只监听组件定义的事件。
+
+可以通过 defineEmits 宏来声明需要抛出的事件。defineEmits() 宏不能在子函数中使用。
+
+defineEmits 仅可用于 `<script setup>` 之中，并且不需要导入，它返回一个等同于 $emit 方法的 emit 函数。它可以被用于在组件的 
+`<script setup>` 中抛出事件，因为此处无法直接访问 $emit
+
+```vue
+<script setup>
+defineProps(['title'])
+defineEmits(['enlarge-text'])
+</script>
+```
+
+如果你没有在使用 <script setup>，你可以通过 emits 选项定义组件会抛出的事件。你可以从 setup() 函数的第二个参数，即 setup 上下文对象上访问到 emit 函数
+
+### emits参数校验
+emits 选项还支持对象语法，它允许我们对触发事件的参数进行验证：
+```vue
+<script setup>
+const emit = defineEmits({
+  submit(payload) {
+    // 通过返回值为 `true` 还是为 `false` 来判断
+    // 验证是否通过
+  }
+})
+</script>
+```
+
+## 组件
+通过 `<script setup>`，导入的组件都在模板中直接可用。 推荐为子组件使用 PascalCase 的标签名。
+
+如果你是直接在 DOM 中书写模板 (例如原生 <template> 元素的内容)，模板的编译需要遵从浏览器中 HTML 的解析行为。在这种情况下，你应该需要使用 kebab-case 形式并显式地关闭这些组件的标签。
+
+### 在原生DOM模板使用组件
+HTML 标签和属性名称是不分大小写的，所以浏览器会把任何大写的字符解释为小写。这意味着当你使用 DOM 内的模板时，无论是 PascalCase 形式的组件名称、
+camelCase 形式的 prop 名称还是 v-on 的事件名称，都需要转换为相应等价的 kebab-case (短横线连字符) 形式
+
+在 DOM 模板中，我们必须显式地写出关闭标签。
+
+某些 HTML 元素对于放在其中的元素类型有限制。我们可以使用特殊的 is attribute 作为一种解决方案。
+```vue
+<table>
+<!--当使用在原生 HTML 元素上时，is 的值必须加上前缀 vue: 才可以被解析为一个 Vue 组件-->
+  <tr is="vue:blog-post-row"></tr>
+</table>
+```
+
+### 注册
+全局注册。app.component。
+
+局部注册。script setup中，直接导入，无需注册。但组件名字是文件名，无法修改。如果需要定义类似 name 的属性，可以再加个平级的 script 标签，在里面实现。其他情况，使用 components 选项来显式注册。
+  
+注意：Vue 3 SFC 一般会自动从组件的文件名推断出组件的 name。在大多数情况下，不需要明确的 name 声明。唯一需要的情况是当你需要 `<keep-alive>` 包含或排除或直接检查组件的选项时，你需要这个名字。
+
+### props
+defineProps 是一个仅 `<script setup>` 中可用的编译宏命令，并不需要显式地导入。声明的 props 会自动暴露给模板。defineProps 会返回一个对象，
+其中包含了可以传递给组件的所有 props。如果你没有使用 `<script setup>`，props 必须以 props 选项的方式声明，props 对象会作为 setup() 
+函数的第一个参数被传入， 可以是字符串数组或者对象的形式。
+
+props如果和子组件变量名冲突，返回子组件变量。
+
+注意：props的type只要包含Boolean，不传该props时会等同于传入false，而增加该props作为属性值为空时等同于传入true。
+
+```javascript
+const props = defineProps(['disabled']);
+
+export default {
+  props: {
+    dislabeld: boolean
+  },
+   props: ['disabled']
+}
+```
+
+#### props validation
+```javascript
+defineProps({
+  // Basic type check
+  //  (`null` and `undefined` values will allow any type)
+  propA: Number,
+  // Multiple possible types
+  propB: [String, Number],
+  // Required string
+  propC: {
+    type: String,
+    required: true
+  },
+  // Number with a default value
+  propD: {
+    type: Number,
+    default: 100
+  },
+  // Object with a default value
+  propE: {
+    type: Object,
+    // Object or array defaults must be returned from
+    // a factory function. The function receives the raw
+    // props received by the component as the argument.
+    default(rawProps) {
+      return { message: 'hello' }
+    }
+  },
+  // Custom validator function
+  propF: {
+    validator(value) {
+      // The value must match one of these strings
+      return ['success', 'warning', 'danger'].includes(value)
+    }
+  },
+  // Function with a default value
+  propG: {
+    type: Function,
+    // Unlike object or array default, this is not a factory 
+    // function - this is a function to serve as a default value
+    default() {
+      return 'Default function'
+    }
+  }
+})
+```
+
+### 在组件上使用v-model
+1、将组件内部原生 input 元素的 value attribute 绑定到 modelValue prop
+2、输入新的值时在 input 元素上触发 update:modelValue 事件
+
+```vue
+<input type="text" :value="modelValue" @input="$emit('update:modelValue', $event.target.value)"/>
+```
+```javascript
+defineProps(['modelValue']);
+defineEmits(['update:modelValue']);
+```
+
+另一种在组件内实现 v-model 的方式是使用一个可写的，同时具有 getter 和 setter 的计算属性。get 方法需返回 modelValue prop，而 set 方法需触发相应的事件
+```javascript
+import { computed } from 'vue'
+
+const props = defineProps(['modelValue'])
+const emit = defineEmits(['update:modelValue'])
+
+const value = computed({
+   get() {
+      return props.modelValue
+   },
+   set(value) {
+      emit('update:modelValue', value)
+   }
+})
+```
+```vue
+<template>
+  <input v-model="value" />
+</template>
+```
+
+#### v-model的参数
+默认情况下，v-model 在组件上都是使用 modelValue 作为 prop，并以 update:modelValue 作为对应的事件。我们可以通过给 v-model 指定一个参数来更改这些名字
+```vue
+<MyComponent v-model:title="bookTitle" />
+```
+
+#### 自定义v-model修饰符
+使用 `v-model` 时传入的修饰符在组件的 `modelModifiers props[modifier name]` 中。
+
+```vue
+<Comp v-model.capitalize="test"/>
+```
+```javascript
+// props.modelModifiers.capitalize为true则添加了capitalize修饰符
+const props = defineProps({
+           modelValue: String,
+           modelModifiers: { default: () => ({}) }
+})
+```
+
+For v-model bindings with both argument and modifiers, the generated prop name will be arg + "Modifiers".
+```vue
+<Comp v-model:title.capitalize="test"/>
+```
+```javascript
+const props = defineProps(['title', 'titleModifiers'])
+defineEmits(['update:title'])
+```
+
+### css feature
+#### scoped css
+When a `<style>` tag has the scoped attribute, its CSS will apply to elements of the current component only.
+
+However, a child component's root node will be affected by both the parent's scoped CSS and the child's scoped CSS. 
+
+#### Deep Selectors
+If you want the parent component's style to affect child components, you can use the :deep() pseudo-class:
+```vue
+<style scoped>
+   .a :deep(.b) {
+   }
+</style>
+```
+
+> DOM content created with v-html are not affected by scoped styles, but you can still style them using deep selectors.
+
+#### Slotted Selectors#
+By default, scoped styles do not affect contents rendered by <slot/>, as they are considered to be owned by the parent 
+component passing them in. To explicitly target slot content, use the :slotted pseudo-class:
+
+```vue
+<style scoped>
+:slotted(div) {
+  color: red;
+}
+</style>
+```
+
+#### Global Selectors#
+If you want just one rule to apply globally, you can use the :global pseudo-class rather than creating another <style> (see below):
+
+```vue
+<style scoped>
+:global(.red) {
+  color: red;
+}
+</style>
+```
+
+#### Mixing Local and Global Styles#
+You can also include both scoped and non-scoped styles in the same component.
+
+#### css module
+A `<style module>` tag is compiled as CSS Modules and exposes the resulting CSS classes to the component as an object under the key of `$style`:
+
+```vue
+<template>
+  <p :class="$style.red">This should be red</p>
+</template>
+
+<style module>
+.red {
+  color: red;
+}
+</style>
+```
+Refer to the [CSS Modules spec](https://github.com/css-modules/css-modules) for more details 
+
+##### Custom Inject Name
+You can customize the property key of the injected classes object by giving the module attribute a value: `<style module="classes">`
+
+##### Usage with Composition API
+The injected classes can be accessed in `setup()` and `<script setup>` via the useCssModule API. 
+
+```javascript
+import { useCssModule } from 'vue'
+
+// inside setup() scope...
+// default, returns classes for <style module>
+useCssModule()
+
+// named, returns classes for <style module="classes">
+useCssModule('classes')
+```
+
+#### v-bind() in CSS
+SFC `<style>` tags support linking CSS values to dynamic component state using the v-bind CSS function:
+
+```vue
+<script>
+export default {
+  data() {
+    return {
+      color: 'red'
+    }
+  }
+}
+</script>
+
+<style>
+.text {
+  color: v-bind(color);
+}
+</style>
+```
+
+The syntax works with `<script setup>`, and supports JavaScript expressions (must be wrapped in quotes):
+```vue
+<style scoped>
+p {
+  color: v-bind('theme.color');
+}
+</style>
+```
+
+### 透传attribute
+“透传 attribute”指的是传递给一个组件，却没有被该组件声明为 props 或 emits 的 attribute 或者 v-on 事件监听器。
+
+1. 当一个组件以单个元素为根作渲染时，透传的 attribute 会自动被添加到根元素上。 重复的class，style和监听器将会合并。
+2. 深层组件继承。子组件未使用，将会继续传递下去。
+
+#### 多根节点的attribute继承
+多个根节点的组件没有自动 attribute 透传行为。`$attrs` 必须被显式绑定。
+
+#### 禁用attribute继承
+`inheritAttrs: false` script setup中不支持，需要额外的script。
+
+禁用后可以用 `$attrs` 访问这些属性。需要注意的是，其中的事件监听器是以on开头，属性则保留了传递时的大小写，不像props会做处理。
+
+#### 获取$attrs
+- 模板中：直接使用$attrs。
+- script setup：useAttrs hook返回。
+- script: setup选项中第二个参数中可以拿到attrs。
+
+attrs对象本身不是响应式的。
+
+### 插槽
+#### 动态插槽
+```vue
+<template v-slot:[slotName]></template>
+<template #[slotName]></template>
+```
+
+#### 作用域插槽
+```vue
+<!--默认插槽-->
+<slot :text="msg"></slot>
+
+<template v-slot="{text}">
+  <span>{{text}}</span>
+</template>
+
+<!--具名插槽-->
+<slot :text="msg" name="header"></slot>
+
+<template #header="{msg}">
+  {{msg}}
+</template>
+```
+
+### 异步组件
+https://cn.vuejs.org/guide/components/async.html
+
+
+## 自定义指令
+在 `<script setup>` 中，任何以 v 开头的驼峰式命名的变量都可以被用作一个自定义指令。其他情况通过directives 选项注册。
+
+指令通过钩子函数接收参数实现对DOM操作。只有当所需功能只能通过直接的 DOM 操作来实现时，才应该使用自定义指令。参数中除el外都只读。
+```vue
+<script setup>
+// 在模板中启用 v-focus
+const vFocus = {
+  mounted: (el) => el.focus()
+}
+</script>
+
+<!--简化形式-->
+<script >
+app.directive('color', (el, binding) => {
+  // 这会在 `mounted` 和 `updated` 时都调用
+  el.style.color = binding.value
+})
+</script>
+```
+
+### 自定义指令钩子参数
+https://cn.vuejs.org/guide/reusability/custom-directives.html#directive-hooks
+- 指令可以接收任何合法的 JavaScript 表达式。
+- 在组件上使用自定义指令时，它会始终应用于组件的根节点。多根节点组件不推荐使用，指令会被忽略。
+
+## 插件
+一个插件可以是一个拥有 `install()` 方法的对象，也可以直接是一个安装函数本身。 会接收到安装它的应用实例和传递给 `app.use()` 的额外选项作为参数。
+
+## 内置组件
+### Transition
+https://cn.vuejs.org/guide/built-ins/transition.html
+### TransitionGroup
+`<transition-group>` 不再默认渲染根元素，但仍然可以用 tag attribute 创建根元素。
+
+https://cn.vuejs.org/guide/built-ins/transition-group.html
+
+### keep-alive
+KeepAlive 默认会缓存内部的所有组件实例，但我们可以通过 include 和 exclude prop 来定制该行为。这两个 prop 的值都可以是一个以英文逗号分隔的
+字符串、一个正则表达式，或是包含这两种类型的一个数组，会根据组件的 name 选项进行匹配。
+
+#### 最大缓存实例数
+传入 max prop 来限制可被缓存的最大组件实例数。KeepAlive的行为在指定了 max 后类似一个 LRU 缓存。
+
+#### 缓存实例生命周期
+一个持续存在的组件可以通过 `onActivated()` 和 `onDeactivated()` 注册相应的两个状态的生命周期钩子。
+
+- onActivated：调用时机为首次挂载以及每次从缓存中被重新插入时
+- onDeactivated：在从 DOM 上移除、进入缓存以及组件卸载时调用
+
+这两个钩子不仅适用于 `<KeepAlive>` 缓存的根组件，也适用于缓存树中的后代组件。
+
+## component组件
+在setup script中，is传递的必须是shallowRef包裹后的组件实例。或者在模板中通过表达式判断，例如三元运算符。
+
+## Teleport
+Teleport是一个内置组件，它可以将一个组件内部的一部分模板“传送”到该组件的 DOM 结构外层的位置去。
+
+- to属性：是一个 CSS 选择器字符串，也可以是一个 DOM 元素对象。会把组件内容传送到to指定的元素下。
+- disabled：禁止。
+
+可以使用多个Teleport，按顺序挂载。
+
+## 性能优化
+https://web.dev/fast/提供了全面的总结。
+
+web 应用性能的两个主要方面：
+
+页面加载性能：首次访问时，应用展示出内容与达到可交互状态的速度。这通常会用 Google 所定义的一系列 Web 指标 (Web Vitals) 来进行衡量，
+如最大内容绘制 (Largest Contentful Paint，缩写为 LCP) 和首次输入延迟 (First Input Delay，缩写为 FID)。
+
+更新性能：应用响应用户输入更新的速度。比如当用户在搜索框中输入时结果列表的更新速度，或者用户在一个单页面应用 (SPA) 中点击链接跳转页面时的切换速度。
+
+### 衡量性能的方法
+用于生产部署的负载性能分析：
+- https://pagespeed.web.dev/
+- https://www.webpagetest.org/
+
+用于本地开发期间的性能分析：
+- Chrome 开发者工具“性能”面板
+- app.config.performance 将会开启 Vue 特有的性能标记，
+- Vue 开发者扩展
+
+### vue中的措施
+- defineAsyncComponent懒加载组件
+- 保持Props 稳定性。props改变会让组件更新。例如在一个循环列表中，如果props设置为id传入了每一个子项，激活子项改变后都会更新。最好设置为active状态，从而避免props的变更。
+- v-once。在随后的重新渲染，元素/组件及其所有子项将被当作静态内容并跳过渲染。这可以用来优化更新时的性能。
+- v-memo。https://cn.vuejs.org/api/built-in-directives.html#v-memo
+- 虚拟滚动。
+- 减少大型不可变数据的响应性开销。使用 shallowRef() 和 shallowReactive()。浅层式 API 创建的状态只在其顶层是响应式的，只能通过替换整个根状态来触发更新。
+- 避免大型场景中不必要的组件抽象。组件实例比普通 DOM 节点要昂贵得多，而且为了逻辑抽象创建太多组件实例将会导致性能损失。想象一下一个有 100 项的列表，
+每项的组件都包含许多子组件。在这里去掉一个不必要的组件抽象，可能会减少数百个组件实例的无谓性能消耗。
