--- a/_posts/JavaScript/2022-10-30-Proxy.md
+++ b/_posts/JavaScript/2022-10-30-Proxy.md
@@ -43,14 +43,15 @@ new Proxy(target, {
 ```
 第三个参数receiver —— 如果目标属性是一个 getter 访问器属性，则 receiver 是target对象中getter调用时的this值。
 通常，这就是 proxy 对象本身（或者，如果我们从 proxy 继承，则是从该 proxy 继承的对象）。
+
 ### ownKeys
 ownKeys代理了大多数遍历对象属性的方法。例如：
-Object.getOwnPropertyNames(obj) 返回非 symbol 键。
-Object.getOwnPropertySymbols(obj) 返回 symbol 键。
-Object.keys/values() 返回带有 enumerable 标志的非 symbol 键/值（属性标志在 属性标志和属性描述符 一章有详细讲解)。
-for..in 循环遍历所有带有 enumerable 标志的非 symbol 键，以及原型对象的键。
+- Object.getOwnPropertyNames(obj) 返回非 symbol 键。
+- Object.getOwnPropertySymbols(obj) 返回 symbol 键。
+- Object.keys/values() 返回带有 enumerable 标志的非 symbol 键/值（属性标志在 属性标志和属性描述符 一章有详细讲解)。
+- for..in 循环遍历所有带有 enumerable 标志的非 symbol 键，以及原型对象的键。
 
-如果我们返回对象中不存在的键，并不会列出，因为该方法会对每个属性调用内部方法 [[GetOwnProperty]] 来获取 它的描述符（descriptor），不存在的键没有 enumerable 标志，因此它被略过。
+如果我们返回对象中不存在的键，并不会列出，因为该方法会对每个属性调用内部方法 `[[GetOwnProperty]]` 来获取 它的描述符（descriptor），不存在的键没有 enumerable 标志，因此它被略过。
 可以通过设置getOwnPropertyDescriptor返回带有enumerable标志的对象解决。
 ### apply
 捕捉器能使代理以函数的方式被调用
