--- a/_posts/JavaScript/事件/2022-12-26-事件.md
+++ b/_posts/JavaScript/事件/2022-12-26-事件.md
@@ -26,6 +26,7 @@ options对象可选项：
 - passive：如果为 true，那么处理程序将不会调用 preventDefault()，我们稍后将在 浏览器默认行为 一章中介绍。
 
 addEventListener(..., true) 的处理程序（true 是 {capture: true} 的一个简写形式）。
+
 ## 事件触发阶段
 捕获阶段-目标阶段-冒泡阶段。大多数事件会冒泡，因此能实现事件代理。
 
@@ -36,6 +37,7 @@ addEventListener(..., true) 的处理程序（true 是 {capture: true} 的一个
 目标阶段在冒泡阶段和捕获阶段都会触发，事件上的多个监听器按其监听顺序执行
 
 event.eventPhase，它告诉我们捕获事件的阶段数。当前阶段（capturing=1，target=2，bubbling=3）。
+
 ### 停止冒泡
 如果一个元素在一个事件上有多个处理程序，即使其中一个停止冒泡，其他处理程序仍会执行。
 换句话说，event.stopPropagation() 停止向上移动，但是当前元素上的其他处理程序都会继续运行。
@@ -43,8 +45,12 @@ event.eventPhase，它告诉我们捕获事件的阶段数。当前阶段（capt
 有一个 event.stopImmediatePropagation() 方法，可以用于停止冒泡，并阻止当前元素上的处理程序运行。使用该方法之后，其他处理程序就不会被执行。
 
 不要在没有需要的情况下停止冒泡，会产生隐藏的陷阱，例如需要监听全局点击事件，当点击停止冒泡区域就无法触发。
+
+> blur, focus, mouseenter, mouseleave事件不冒泡
+
 ## 事件的默认行为
 许多事件会自动触发浏览器执行某些行为。
+
 ### 阻止默认行为
 有两种方式来告诉浏览器我们不希望它执行默认行为：
 - 主流的方式是使用 event 对象。有一个 event.preventDefault() 方法。
@@ -66,10 +72,12 @@ function(event) {
   handler() // onclick 的内容，return false没有被返回
 }
 ```
+
 #### 事件之间的互相影响
 某些事件会相互转化。如果我们阻止了第一个事件，那就没有第二个事件了。
 
 例如，点击 input ，默认会触发 focus 事件，而阻止了 input 的 mousedown 事件，focus 事件就无法通过鼠标点击触发了，只能通过 tab 触发。
+
 ### passive选项
 addEventListener 的可选项 passive: true 向浏览器发出信号，表明处理程序将不会调用 preventDefault()。
 
@@ -82,13 +90,16 @@ addEventListener 的可选项 passive: true 向浏览器发出信号，表明处
 passive: true 选项告诉浏览器，处理程序不会取消滚动。然后浏览器立即滚动页面以提供最大程度的流畅体验，并通过某种方式处理事件。
 
 对于某些浏览器（Firefox，Chrome），默认情况下，touchstart 和 touchmove 事件的 passive 为 true。
+
 ### event.defaultPrevented
 如果默认行为被阻止，那么 event.defaultPrevented 属性为 true，否则为 false。
 
 可以用于冒泡事件的单独处理和全局处理。例如单独处理时调用 preventDefault 方法了，那么全局处理时判断 defaultPrevented 是否为 true，是的话本次不做处理。
 这样更灵活，外部代码可以访问本次事件信息。
+
 ### 鼠标事件
 event.button 能区分鼠标的按键状态，被弃用的 event.which 能区分鼠标左中右按键。
+
 #### 组合键：shift，alt，ctrl，meta
 所有的鼠标事件都包含有关按下的组合键的信息。
 
@@ -101,6 +112,7 @@ event.button 能区分鼠标的按键状态，被弃用的 event.which 能区分
 Mac 用户更习惯把 Cmd 作为 ctrl 使用，所以我们应该检查 if (event.ctrlKey || event.metaKey)
 
 键盘组合是工作流的一个补充。但应该要有不使用键盘也能做到这一点的方式。
+
 #### 防止在鼠标按下时的选择
 双击鼠标会有默认行为，选择文本。在这种情况下，最合理的方式是防止浏览器对 mousedown 进行操作，return false。
 
