--- a/_posts/JavaScript/事件/2023-1-3-自定义事件.md
+++ b/_posts/JavaScript/事件/2023-1-3-自定义事件.md
@@ -33,11 +33,12 @@ let event = new MouseEvent("click", { bubbles: true, cancelable: true, clientX: 
 在第二个参数（对象）中，我们可以为我们想要与事件一起传递的任何自定义信息添加一个附加的属性 detail。CustomEvent 提供了特殊的 detail 字段，以避免与其他事件属性的冲突。
 
 ## 派发事件
-事件对象被创建后，我们应该使用 elem.dispatchEvent(event) 调用在元素上“运行”它。dispatchEvent 返回 false 表示事件的处理函数调用了 preventDefault 阻止了默认行为。
+事件对象被创建后，我们应该使用 `elem.dispatchEvent(event)` 调用在元素上“运行”它。`dispatchEvent` 返回 false 表示事件的处理函数调用了 `preventDefault` 阻止了默认行为。
 
 对自定义事件应该使用 addEventListener，因为 on<event> 仅支持内建事件。
 
 注意：事件的执行是同步的。
+
 ## event.isTrusted
 有一种方法可以区分“真实”用户事件和通过脚本生成的事件。
 
