--- a/_posts/面试/2022-11-05-面试题.md
+++ b/_posts/面试/2022-11-05-面试题.md
@@ -149,6 +149,13 @@ history.popState 当 history 发生变化时触发
 - 导航不可用，需要自己实现前进后退。
 - 初次加载耗时较长
 
+### 虚拟DOM
+虚拟DOM本质就是用一个原生的JavaScript对象去描述一个DOM节点。是对真实DOM的一层抽象。
+
+由于在浏览器中操作DOM是很昂贵的。频繁的操作DOM，会产生一定的性能问题，因此我们需要这一层抽象，在patch过程中尽可能地一次性将差异更新到DOM中，这样保证了DOM不会出现性能很差的情况。
+
+另外还有很重要的一点，为了更好的跨平台，比如Node.js就没有DOM,如果想实现SSR(服务端渲染),那么一个方式就是借助Virtual DOM,因为Virtual DOM本身是JavaScript对象。
+
 ### 指令
 
 ### 响应式原理
@@ -517,6 +524,17 @@ transform scale
 `link(一般省略成a)→visited→hover→active`
 
 ## JS
+### CommonJS 和 ES6 模块的区别
+- CommonJS 是运行时加载，加载的是一个对象（即module.exports属性），该对象只有在脚本运行完才会生成。ES6 Module 是编译时输出接口。它的对外接口只是一种静态定义，在代码静态解析阶段就会生成。
+- CommonJS 输出的是值的拷贝，ES6 Module 输出的是值的引用。
+- CommonJS 导入的模块路径可以是一个表达式，用的是 `require` 方法，而 ES Module 只能是字符串
+- CommonJS 中 `this` 指向当前模块，ES6 Module `this` 指向 `undefined`
+- CommonJS 中有一些顶层变量 arguments、require、module、exports、__filename、__dirname
+
+### typeof 和 instanceof 区别
+- typeof：基本数据类型都能正常显示，除了null。引用类型只有函数正常显示，其余为 'object'。
+- instanceof：用于检测某个构造函数的原型对象在不在某个对象的原型链上。
+
 ### requestAnimationFrame
 大多数电脑显示器的刷新频率是 60Hz，大概相当于每秒钟重绘 60 次。因此，最平滑动画的最佳循环间隔是 1000ms/60，约等于 16.6ms。
 
@@ -925,6 +943,21 @@ new 操作符新建了一个空对象，这个对象原型指向构造函数的 
 ### 如何理解前端模块化 
 前端模块化就是将复杂的文件变成一个一个独立的模块，分成独立的模块有利于重用（复用性）和维护（版本迭代），这样会引来模块之间相互依赖的问题，所以有了 commonJS 规范，AMD，CMD 规范等等，以及用于 JS 打包（编译等处理）的工具 webpack 
 
+### 同源策略
+同源策略，是指只有在地址的协议名、域名和端口名均一样的情况下，才允许访问相同的cookie、localStorage，以及访问页面的DOM或是发送Ajax请求。若在
+不同源的情况下访问，被称为跨域。
+
+同源策略使得不同源的页面不能获取cookie且不能发起Ajax请求，不能获取DOM。
+
+#### CORS
+跨域资源共享(CORS)是一种机制，是W3C标准。它允许浏览器向跨源服务器，发出XMLHttpRequest或Fetch请求。并且整个CORS通信过程都是浏览器自动完成的，不需要用户参与。
+
+实现CORS的关键是服务器需要配置对应的响应头。
+
+当我们发起跨域请求时，如果是简单请求，则不会触发预检，直接发出正常请求。如果是非简单请求，浏览器会自动触发预检，确认目标资源是否支持跨域。
+
+浏览器会根据服务端响应的 header 自动处理剩余的请求，如果响应支持跨域，则继续发出正常请求，如果不支持，则在控制台显示错误。
+
 ### fetch 发送 2 次请求的原因
 fetch 的 post 请求会先发送一次 options 请求，判断服务器是否支持，通过后才真正发送 post 请求。
 
@@ -989,9 +1022,22 @@ css 的解析是从右往左逆向解析的。
 - 可以将内容提升到它们自己的层并进行合成，通过在 GPU 而不是 CPU 上绘制屏幕的一部分来提高渲染性能，从而释放主线程。但是它以内存管理为代价，不能过度使用。有一些特定的属性和元素可以实例化一个层，包括 <video> 和 <canvas>，任何 CSS 属性为 opacity 、3D transform、will-change 的元素。
 
 ### 回流（重排）和重绘
-回流会触发重新绘制和重新排列。当改变元素的几何属性时就可能触发回流。重绘是重新绘制元素。当样式改变而几何属性没有改变时触发重绘。
+回流会触发重新绘制和重新排列。
+
+触发条件：
+- 当改变元素的几何属性时
+- DOM 元素增减移动
+- 读取 `offset`、`offset` 和 `client` 族属性时，浏览器需要回流
+- 调用 `window.getComputedStyle`
+
+重绘是重新绘制元素。
+
+触发条件：
+- 当样式改变时
 
 例如页面初始化时图片大小未指定，从服务器获取到图片资源后将返回到布局阶段重新开始。
+
+
     
 ### 渲染进程下的线程
 - GUI渲染线程：负责渲染浏览器界面，解析html,css,DOM Tree, render Tree ，layout,绘制等
