--- a/_posts/CSS/2022-12-14-css查漏补缺.md
+++ b/_posts/CSS/2022-12-14-css查漏补缺.md
@@ -51,3 +51,11 @@ CSS中起高度作用的是height和line-height。空div插入文字，撑起高
 
 ## position
 position: fixed 能够相对于浏览器窗口放置有一个条件，那就是不能有任何祖先元素设置了 transform、perspective 或者 filter 样式属性。
+
+## em
+`em` 在定义字体大小时以父级字体大小为基准，在定义长度时以自身字体大小为基准。
+
+## 移动端中不同手机html默认的字体大小都是一样的吗
+根元素默认的字体大小是16px。
+
+## transform 属性对 inline 元素无效
