--- a/_posts/JavaScript/二进制数据、文件/2023-2-5-二进制数组.md
+++ b/_posts/JavaScript/二进制数据、文件/2023-2-5-二进制数组.md
@@ -7,8 +7,7 @@ author:
 header-img: 
 catalog: true
 tags:
-    - ArrayBuffer
-    - TypedArray
+    - 二进制
 ---
 # 二进制数组
 在 JavaScript 中二进制操作性能高。
@@ -119,5 +118,70 @@ alert( arr.byteLength ); // 8（字节中的大小）
 - Int8Array，Int16Array，Int32Array —— 用于有符号整数（可以为负数）。
 - Float32Array，Float64Array —— 用于 32 位和 64 位的有符号浮点数。
 
+## 越界行为
+将越界值写入类型化数组，多余的位会被切除。
+
+例如，我们尝试将 256 放入 Uint8Array。256 的二进制格式是 100000000（9 位），但 Uint8Array 每个值只有 8 位，因此可用范围为 0 到 255。结果是 0。
+
+对于更大的数字，仅存储最右边的（低位有效）8 位，其余部分被切除，换句话说，该数字对 28 取模的结果被保存了下来。
+
+Uint8ClampedArray 在这方面比较特殊，它的表现不太一样。对于大于 255 的任何数字，它将保存为 255，对于任何负数，它将保存为 0。此行为对于图像处理很有用。
+
+## TypedArray 方法
+TypedArray 具有常规的 Array 方法，但没有concat 和 splice。
+- 没有 splice —— 我们无法“删除”一个值，因为类型化数组是缓冲区（buffer）上的视图，并且缓冲区（buffer）是固定的、连续的内存区域。我们所能做的就是分配一个零值。
+- 无 concat 方法。
+
+但有两种其他方法：
+- `arr.set(fromArr, [offset])` 从 offset（默认为 0）开始，将 fromArr 中的所有元素复制到 arr。
+- `arr.subarray([begin, end])` 创建一个从 begin 到 end（不包括）相同类型的新视图。这类似于 slice 方法（同样也支持），但不复制任何内容 —— 只是创建一个新视图，以对给定片段的数据进行操作。
+
+## DataView
+DataView 是在 ArrayBuffer 上的一种特殊的超灵活“未类型化”视图。它允许以任何格式访问任何偏移量（offset）的数据。
+
+对于类型化的数组，构造器决定了其格式。整个数组应该是统一的。第 i 个数字是 `arr[i]`。
+
+通过 DataView，我们可以使用 .getUint8(i) 或 .getUint16(i) 之类的方法访问数据。我们在调用方法时选择格式，而不是在构造的时候。
+
+```javascript
+new DataView(buffer, [byteOffset], [byteLength])
+```
+
+* buffer —— 底层的 ArrayBuffer。与类型化数组不同，DataView 不会自行创建缓冲区（buffer）。我们需要事先准备好。
+* byteOffset —— 视图的起始字节位置（默认为 0）。
+* byteLength —— 视图的字节长度（默认至 buffer 的末尾）。
+
+例如，这里我们从同一个 buffer 中提取不同格式的数字：
+```javascript
+// 4 个字节的二进制数组，每个都是最大值 255
+let buffer = new Uint8Array([255, 255, 255, 255]).buffer;
+
+let dataView = new DataView(buffer);
+
+// 在偏移量为 0 处获取 8 位数字
+alert( dataView.getUint8(0) ); // 255
+
+// 现在在偏移量为 0 处获取 16 位数字，它由 2 个字节组成，一起解析为 65535
+alert( dataView.getUint16(0) ); // 65535（最大的 16 位无符号整数）
+
+// 在偏移量为 0 处获取 32 位数字
+alert( dataView.getUint32(0) ); // 4294967295（最大的 32 位无符号整数）
+
+dataView.setUint32(0, 0); // 将 4 个字节的数字设为 0，即将所有字节都设为 0
+```
+
+当我们将混合格式的数据存储在同一缓冲区（buffer）中时，DataView 非常有用。例如，当我们存储一个成对序列（16 位整数，32 位浮点数）时，用 DataView 
+可以轻松访问它们。
+
+## 总结
+ArrayBuffer 是核心对象，是对固定长度的连续内存区域的引用。
+
+几乎任何对 ArrayBuffer 的操作，都需要一个视图。它可以是 TypedArray：或 DataView。
+
+还有另外两个术语，用于对二进制数据进行操作的方法的描述：
+- ArrayBufferView 是所有这些视图的总称。
+- BufferSource 是 ArrayBuffer 或 ArrayBufferView 的总称。
+
 ## 资料
 [Typed arrays - Binary data in the browser](https://web.dev/webgl-typed-arrays/)
+https://zh.javascript.info/arraybuffer-binary-arrays
