--- a/_posts/面试/2022-11-05-面试题.md
+++ b/_posts/面试/2022-11-05-面试题.md
@@ -910,6 +910,11 @@ makeSandbox(code, globalProxy);
 ```
 
 ## 浏览器
+### 在项目中如何把http的请求换成https
+```html
+<meta http-equiv ="Content-Security-Policy" content="upgrade-insecure-requests">
+```
+
 ### 说说事件流
 事件流描述的是从页面中接收事件的顺序,DOM2 级事件流包括下面几个阶段。事件捕获阶段，目标阶段，事件冒泡阶段
 
@@ -1022,7 +1027,8 @@ css 的解析是从右往左逆向解析的。
 - 可以将内容提升到它们自己的层并进行合成，通过在 GPU 而不是 CPU 上绘制屏幕的一部分来提高渲染性能，从而释放主线程。但是它以内存管理为代价，不能过度使用。有一些特定的属性和元素可以实例化一个层，包括 <video> 和 <canvas>，任何 CSS 属性为 opacity 、3D transform、will-change 的元素。
 
 ### 回流（重排）和重绘
-回流会触发重新绘制和重新排列。
+回流会触发重新绘制和重新排列。由于DOM的结构发生了改变，所以需要从生成DOM这一步开始，重新经过样式计算、生成布局树、建立图层树、再到生成绘制列表以
+及之后的显示器显示这整一个渲染过程走一遍，开销是非常大的。
 
 触发条件：
 - 当改变元素的几何属性时
@@ -1030,15 +1036,18 @@ css 的解析是从右往左逆向解析的。
 - 读取 `offset`、`offset` 和 `client` 族属性时，浏览器需要回流
 - 调用 `window.getComputedStyle`
 
-重绘是重新绘制元素。
+重绘是重新绘制元素。当 DOM 的修改导致了样式的变化，并且没有影响几何属性的时候，会导致重绘(repaint)。当发生重绘的时候，会跳过生成布局树和建立图层树的阶段，直接绘制。
 
-触发条件：
-- 当样式改变时
+如何避免回流和重绘：
+- 避免频繁使用 style，而是采用修改class的方式。
+- 将动画效果应用到position属性为absolute或fixed的元素上。
+- 也可以先为元素设置display: none，操作结束后再把它显示出来。因为在display属性为none的元素上进行的DOM操作不会引发回流和重绘
+- 使用createDocumentFragment进行批量的 DOM 操作。
+- 对于 resize、scroll 等进行防抖/节流处理。
+- 避免频繁读取会引发回流/重绘的属性，如果确实需要多次使用，就用一个变量缓存起来。
+- 利用 CSS3 的transform、opacity、filter这些属性可以实现合成的效果，也就是GPU加速。
+- 预先指定图片大小
 
-例如页面初始化时图片大小未指定，从服务器获取到图片资源后将返回到布局阶段重新开始。
-
-
-    
 ### 渲染进程下的线程
 - GUI渲染线程：负责渲染浏览器界面，解析html,css,DOM Tree, render Tree ，layout,绘制等
 - js引擎线程：解析js脚本，运行代码
@@ -1082,6 +1091,132 @@ old space 分为以下几个区域：
 检测到 touchend 事件后，立刻出发模拟 click 事件，并且把浏览器 300 毫秒之后真正触发的事件给阻断掉
 
 ## 网络
+### HTTPS
+#### 工作流程
+HTTPS主要是采用对称密钥加密和非对称密钥加密组合而成的混合加密机制进行传输。
+
+也就是发送密文的一方用"对方的公钥"进行加密处理"对称的密钥"，然后对方在收到之后使用自己的私钥进行解密得到"对称的密钥"，这在确保双发交换的密钥是安全的前提下使用对称密钥方式进行通信。
+
+这个过程简单来说就是：
+* 客户端首先向服务端发送一个HTTPS请求
+* 服务端会把事先配置好的公钥证书随着其它的信息返回给客户端
+* 客户端在收到服务端发来的证书之后进行验证，验证的过程参考数字证书验证，会得到服务端的信息以及它的公钥
+* 验证成功之后生成一个叫做 client_params 的参数发送给服务器；同时自己会用伪随机函数生成一个 secret，这个secret就是它们后续进行通信的对称密钥。
+* 服务器在收到刚刚的 client_params之后，也会根据伪随机函数生成一个secret。这时候双方都有了相同的对称密钥。
+* 后面的传输都会用这个 secret 进行对称密钥加解密传输
+
+#### 对称密钥加密和非对称密钥加密有什么区别
+对称密钥加密是最简单的一种加密方式，它的加解密用的都是相同的密钥，这样带来的好处就是加解密效率很快，但是并不安全。
+
+而非对称密钥会有两把密钥，一把是私钥，只有自己才有；一把是公钥，可以发布给任何人。并且用一把密钥加密的内容只有另外一把密钥才能解。这样带来的一个好
+处就是能保证传输的内容是安全的。但是非对称加密数据传输效率相对低了。
+
+#### 混合加密好处
+对称密钥加密和非对称密钥加密都有它们各种的优缺点，而混合加密机制就是将两者结合利用它们各自的优点来进行加密传输。
+
+对称密钥优点是加解密效率高，那么客户端和服务器确定连接后就可以用它进行数据传输，前提是双方安全地拿到这把对称密钥。这时候可以用非对称加密来传输对称密钥，
+因为非对称加密优点是保证安全传输内容。
+
+所以好处是比单纯的非对称加密通信传输效率高，还解决了 HTTP 中内容可能被窃听的问题。
+
+#### 混合加密的缺点
+混合加密主要是为了解决HTTP中内容可能被窃听的问题。但是它并不能保证数据的完整性，也就是说在传输的时候数据是有可能被第三方篡改的，比如完全替换掉，
+所以说它并不能校验数据的完整性。如果需要做到这一点就需要使用到数字签名。
+
+#### 什么是数字签名
+数字签名的产生主要就是为了解决HTTP中内容可能被篡改的问题，即校验数据的完整性。它能确定消息是发送方发送过来的，因为这里会有一个验证数字签名的过程，
+别人是假冒不了发送方的签名的。
+
+数字签名它是什么呢？它的产生过程其实就是两步，第一步将原文用Hash函数生成一个叫消息摘要的东西，第二步就是用发送方的私钥对这个消息摘要进行进行加密。
+这个产生的东西就叫做数字签名，它一般会与原文一起发送给接收者。
+
+而验证它的过程其实也并不复杂。
+* 首先发送方会将原文与数字签名(也就是加密后的摘要)一起发送给接收方
+* 接收方会接收到这两样东西，即原文和数字签名
+* 接收方用Hash函数处理原文会得到一份消息摘要
+* 同时用发送方的公钥解密数字签名也会得到一份消息摘要
+* 只要比较这两份消息摘要是否相等就可以验证出数据有没有被篡改了
+
+当然这里关键的一步就是要保证发送方传递过来的公钥是可信赖的，这时候就得用到数字证书了。
+
+#### 数字证书
+数字证书也叫公钥证书。它主要是为了解决通信方身份遭伪装的问题，也就是验证通信方的身份。
+
+因为我们知道在HTTPS中虽然有了混合加密机制保证数据不被监听，有了数字签名校验数据的完整性，但是数字签名校验的前提是能拿到发送方的公钥，并且保证这个
+公钥是可信赖的，所以就需要数字证书。
+
+它简单来说其实是由一些权威的数字认证机构颁发给服务器的一个文件。数字认证机构简称CA，它是客户端和服务端都信任的第三方机构，我知道比较有名的一个就是
+威瑞信(VeriSign)。至于颁发证书的流程，主要是为：
+
+* 服务器的运营人员会向认证机构提交自己的公钥、组织信息、个人信息等并申请认证
+* 而认证机构在拿到这些信息后会通过线上、线下各种途径验证申请者提交信息的真实性
+* 在确认其真实性后，认证机构给这些信息(申请者的公钥，组织信息，个人信息以及认证机构自己的信息等)，我们简称为明文信息，进行数字签名，过程也就是签名提到的数字签名的步骤：1.通过Hash函数处理明文信息生成一个信息摘要；2.再用认证机构自己的私钥对信息摘要进行加密处理。通过这两个步骤生成的文件就叫数字签名。
+* 之后会将明文信息和数字签名组合而成的证书颁发给申请者，也就是服务器。
+
+#### 为什么说数字证书就能对通信方的身份进行验证呢？
+那是因为在客户端第一次给服务端发送HTTPS请求的时候，服务端会将它自己的证书随着其它的信息(例如server_random、 server_params、需要使用的加密套件等东西)一起返给客户端。
+
+客户端在收到之后首先会验证这个证书，只有验证通过之后才会有后续操作。而验证的过程其实也就是数字签名的验证过程：
+
+* 前面说过了，证书其实是由明文信息(申请者的公钥，组织信息，个人信息以及认证机构自己的信息等)和这个明文信息的数字签名组成的。(对应着题5也就是原文和数字签名)
+* 客户端会用Hash函数处理明文信息生成一个信息摘要
+* 然后再用内置在浏览器上的CA的公钥来解密证书里的数字签名，得到一个信息摘要。因为我们知道证书实际是由CA颁发给服务器的，并且里面的数字签名也是用的CA的私钥加密的，所以只有CA的公钥才能解。
+* 最后再将两个信息摘要进行对比，若是一样则能保证通信方的身份是正确的。
+
+其实验证证书的过程不仅仅是数字签名的验证，客户端还会验证证书相关的域名信息，有效时间，是不是在CRL吊销列表里，以及它的上一级是否有效等等。
+
+#### 请详细的说一下HTTPS它的加密传输过程，涉及到哪些算法呢？
+在HTTPS加密传输中，实际上涉及到 SSL/TLS 协议，这里是有一个TSL握手的过程。对于传统的TLS握手也就是RSA握手我就不描述了，主要是说一下现在主流的TLS1.2版本的握手，也就是ECDHE握手。
+
+它的过程大致来说是这样的：
+1. 客户端在第一次发送HTTPS请求的时候，会把 client_random、TSL版本号、加密套件列表发送给服务器
+
+2. 服务器在接收到之后确认TSL的版本号，同时发送 server_random、server_params、需要使用的加密套件、以及自己的证书给客户端
+
+3. 客户端在收到这些信息之后，首先是会对服务器的证书进行验证(也就是题目7)，若是验证成功则会传递一个 client_params 给服务器
+
+4. 与此同时客户端会通过ECDHE算法计算出一个pre_random，其中是传入了两个参数，一个是 client_params，还一个是 server_params。(也就是说：ECDHE(client_params, server_params) = per_random)
+
+5. 这时候客户端就同时拥有了 client_random、server_random、pre_random，它会将这三个参数通过一个伪随机函数计算得出最终的secret，这个secret就是它们后续通信所要用的对称密钥。
+
+6. 而在客户端生成完secret之后，会给服务器发送一个收尾消息，告诉服务器之后都要用对称加密，且对称加密的算法是用第一次约定好的。
+
+7. 服务器它在接收到刚刚传递过来的client_params之后，也会使用和客户端一样的方式生成secret，并且也会发送一个收尾消息给客户端。
+
+8. 当双方都收到收尾消息并验证成功之后，握手就结束了。后面开始用这个secret对称密钥加密报文进行传输。
+
+#### RSA握手
+1. 客户端首先向服务端发送一个HTTPS请求
+2. 服务端会把事先配置好的公钥证书随着其它的信息返回给客户端
+3. 客户端在收到服务端发来的证书之后进行验证，验证的过程参考数字证书验证，会得到服务端的信息以及它的公钥
+4. 验证成功之后会用伪随机函数计算出一个加密所需要的对称密钥(secret)，并且用服务端的公钥加密这个对称密钥发送给服务端
+5. 服务端再用自己的私钥解密刚刚的消息，得到里面的对称密钥。此时服务端和客户端都有了对称密钥。
+6. 后面的传输都会用这个 secret 进行对称密钥加解密传输
+
+#### 详细描述RSA握手
+1. 客户端首先发送 client_random、TSL版本号、加密套件列表给服务器
+2. 服务器在接收到之后确认TSL版本号，同时发送server_random、需要使用的加密套件、自己的证书给客户端
+3. 客户端在收到这些信息之后，首先是会对服务器的证书进行验证(也就是题目7)，若是验证成功则会用RSA算法生成一个pre_random，且用服务器的公钥(在证书中)加密pre_random发送给服务器。
+4. 此时，客户端有了 client_random、server_random、pre_random，它会将这三个参数通过一个伪随机函数计算得出最终的secret，这个secret就是它们后续通信所要用的对称密钥。
+5. 服务器接收到了刚刚用自己公钥加密的pre_random之后，用自己的私钥进行解密，得到里面的 pre_random，用和客户端一样的方式生成secret。
+6. 之后就用这个 secret对称密钥加密报文传输。
+
+#### ECDHE握手和RSA握手又有什么区别呢
+它们的区别主要是：
+
+1. 生成secret(对称密钥)的过程不同。RSA中是使用RSA算法生成一个pre_random并用服务器的公钥加pre_random发送给服务器，然后各自用伪随机函数生成相同的secret对称密钥；而在ECDHE握手中，它没有用到RSA算法，而是用ECDHE算法生成的pre_random，且这个过程中比RSA多了client_params和server_params两个参数。
+2. 在生成完secret之后，ECDHE握手在客户端发送完收尾消息后可以提前抢跑，直接发送 HTTP 报文，节省了一个 RTT，不必等到收尾消息到达服务器，然后等服务器返回收尾消息给自己，直接开始发请求。这也叫TLS False Start。
+3. 最主要的：RSA不具备向前安全性，ECDHE有
+
+（向前安全性：一次破解并不影响历史信息的性质就是向前安全性）
+
+#### 向前安全性
+一句话概括：一次破解并不影响历史信息的性质就是向前安全性。
+
+比如在RSA握手的过程中，客户端拿到了服务端的公钥，然后用此公钥加密pre_random给服务端。如果此时有第三方有服务端的私钥，并且截获了之前所有报文的时候，那么它就可以破解这段密文并拿到pre_random、client_random、server_random并根据对应的伪随机函数生成secret，即拿到了最终通信的对称密钥，每一个历史报文都能通过这样的方式进行破解。它就不具有向前安全性。
+
+但是ECDHE在每次握手的时候都会产生一个零时的密钥对(也就是client_params、server_params)，即使第三方有了私钥能破解，但是对之前的历史报文并没有影响。它就具有向前安全性。
+
 ### node实现websocket
 ```
 //ws.js
