--- a/_posts/微信/2022-11-07-小程序查漏补缺.md
+++ b/_posts/微信/2022-11-07-小程序查漏补缺.md
@@ -178,12 +178,26 @@ Component({
 - 将 class 定义成 externalClasses 外部样式类使得自定义组件 wxml 可以使用 class 值。
 
 #### 生命周期
+##### 页面生命周期
+在 `Page({})` 中定义。
+
+[Page参数](https://developers.weixin.qq.com/miniprogram/dev/reference/api/Page.html)
+
 ##### 组件生命周期
-在 Component 构造器的第一级参数中 lifetimes 字段内进行声明，其优先级最高。
+生命周期方法可以直接定义在 Component 构造器的第一级参数中。
+
+推荐在 Component 构造器的第一级参数中 lifetimes 字段内进行声明，其优先级最高。
+
+注意：
+- created 时不能调用 setData
+
 ##### 组件所在页面的生命周期
 组件所在页面的生命周期在 pageLifetimes 定义段中定义。
 
-可用的全部生命周期列表：https://developers.weixin.qq.com/miniprogram/dev/framework/custom-component/lifetimes.html
+注意：自定义 tabBar 的 pageLifetime 不会触发。
+
+[可用的全部生命周期列表](https://developers.weixin.qq.com/miniprogram/dev/framework/custom-component/lifetimes.html)
+
 #### behaviors
 ##### 自定义behaviors
 与 Vue mixins 类似，在组件的 behaviors 字段中定义。同名字段的覆盖和组合规则：
