--- a/_posts/浏览器/动画/2023-3-22-CSS动画.md
+++ b/_posts/浏览器/动画/2023-3-22-CSS动画.md
@@ -74,3 +74,63 @@ CSS 提供几条内建的曲线：linear、ease、ease-in、ease-out 和 ease-in
 
 正如我们所知，y 表示『动画进程的完成度』。y = 0 表示属性的初始值，y = 1 则表示属性的最终值。因此，y < 0 意味着属性值要比初始值小，而 y > 1 则表明属性值要比最终值大。
 
+## 阶跃函数（Steps）
+时间函数 `steps(number of steps[, start/end])` 允许你让动画分段进行，`number of steps` 表示需要拆分为多少段。
+
+例如：
+```css
+#stripe.animate  {
+  transform: translate(-90%);
+  transition: transform 9s steps(9, start);
+}
+```
+
+steps 的第一个参数表示段数。这个过渡动画将会被拆分为 9 个部分（每个占 10%）。时间间隔也会以同样的方式被拆分：9 秒会被分割为多个时长 1 秒的间隔。
+
+第二个参数可以取 start 或 end 两者其一。
+
+start 表示在动画开始时，我们需要立即开始第一段的动画。
+
+可以观察到，在动画过程中：当我们单击数字之后，它会立马变为 1（即第一段），然后在下一秒开始的时候继续变化。
+
+具体的流程如下：
+
+* 0s —— -10%（在第一秒开始的时候立即变化）
+* 1s —— -20%
+* …
+* 8s – -80%
+* （最后一秒，显示最终值）
+
+另一个值 end 表示：改变不应该在最开始的时候发生，而是发生在每一段的最后时刻。
+
+其流程如下：
+
+* 0s —— 0
+* 1s —— -10%（在第一秒结束时第一次变化）
+* 2s —— -20%
+* …
+* 9s —— -90%
+
+另外还有一些简写值：
+
+* step-start —— 等同于 steps(1, start)。即：动画立刻开始，并且只有一段。也就是说，会立刻开始，紧接着就结束了，宛如没有动画一样。
+* step-end —— 等同于 steps(1, end)。即：在 transition-duration 结束时生成一段动画。
+
+## transitionend 事件
+CSS 动画完成后，会触发 transitionend 事件。transition 设置了几个属性的动画，该事件就会触发几次。
+
+`transitionend` 的事件对象有几个特定的属性：
+
+`event.propertyName` ：当前完成动画的属性，这在我们同时为多个属性加上动画时会很有用。
+
+`event.elapsedTime` ：动画完成的时间（按秒计算），不包括 transition-delay。
+
+## 关键帧动画（Keyframes）
+我们可以通过 CSS 提供的 `@keyframes` 规则整合多个简单的动画。
+
+它会指定某个动画的名称以及相应的规则：哪个属性，何时以及何地渲染动画。然后使用 `animation` 属性把动画绑定到相应的元素上，并为其添加额外的参数。
+
+[详细的规范说明](https://drafts.csswg.org/css-animations/)
+
+## 总结
+CSS 动画快速，而且对 CPU 造成的压力很小。
