--- a/_posts/面试/2022-11-05-面试题.md
+++ b/_posts/面试/2022-11-05-面试题.md
@@ -186,7 +186,7 @@ history.popState 当 history 发生变化时触发
 - 页面根元素
 - z-index 值为数值的定位元素
 > 1、z-index: auto 和 z-index: 0 在层叠等级上属于同一级。但是 z-index: 0 就是符合这一条“z-index 为数值”会使得元素升级为层叠上下文。
-2、IE6，7 有个不合常理的地方，就是当元素的 z-index 为 auto 的时候，该元素也升级为创建层叠上下文。
+> 2、IE6，7 有个不合常理的地方，就是当元素的 z-index 为 auto 的时候，该元素也升级为创建层叠上下文。
 - CSS3 属性。
   - z-index 值不为 auto 的 flex 项(父元素 display : flex | inline-flex )
   - 元素的 opacity 值不是 1
@@ -1021,20 +1021,102 @@ css 的解析是从右往左逆向解析的。
 
 浏览器会阻塞页面渲染直到它接收和执行了所有的 CSS。CSS 是渲染阻塞是因为规则可以被覆盖，所以内容不能被渲染直到 CSSOM 的完成。完成后才能构建 render tree。
 
-### 浏览器渲染优化方式
+#### 浏览器渲染优化方式
 - 区分优先级，异步、延迟加载请求减少渲染时间
 - 减少请求数量和体积
 - 可以将内容提升到它们自己的层并进行合成，通过在 GPU 而不是 CPU 上绘制屏幕的一部分来提高渲染性能，从而释放主线程。但是它以内存管理为代价，不能过度使用。有一些特定的属性和元素可以实例化一个层，包括 `<video>` 和 `<canvas>`，任何 CSS 属性为 opacity 、3D transform、will-change 的元素。
 
-### 回流（重排）和重绘
+#### 回流（重排）和重绘
 回流会触发重新绘制和重新排列。由于DOM的结构发生了改变，所以需要从生成DOM这一步开始，重新经过样式计算、生成布局树、建立图层树、再到生成绘制列表以
 及之后的显示器显示这整一个渲染过程走一遍，开销是非常大的。
 
-触发条件：
-- 当改变元素的几何属性时
-- DOM 元素增减移动
-- 读取 `offset`、`scroll` 和 `client` 族属性时，浏览器需要回流
-- 调用 `window.getComputedStyle`
+什么时候会触发 Layout(reflow) 呢？一般来说，当元素位置发生变化时就会。但也不尽然，因为浏览器会自动合并更改，在达到某个数量或时间后，会合并为一次 reflow
+
+但某些代码会导致浏览器的这个优化失效，没有合并 reflow。这一般出现在我们用 js API 访问某个元素尺寸时，为了保证拿到的是精确值，不得不提前触发一次
+reflow，即便写在 for 循环里。
+
+当然也不是每次访问元素位置都会触发 reflow，在浏览器触发 reflow 后，所有已有元素位置都会记录快照，只要不再触发位置等变化，第二次开始访问位置就不会触发 reflow
+
+这个 ”触发位置等变化“，一共有这么几类：
+
+**获得盒子模型信息**
+* 读取 `offset`、`scroll` 和 `client` 族属性时。elem.offsetLeft, elem.offsetTop, elem.offsetWidth, elem.offsetHeight, elem.offsetParent. elem.clientLeft, elem.clientTop, elem.clientWidth, elem.clientHeight
+* elem.getClientRects(), elem.getBoundingClientRect(), window.getComputedStyle. getComputedStyle 通常会导致重排和重绘，是否触发重排取决于是否访问了位置相关的 key 等因素。
+* 当改变元素的几何属性时 
+* DOM 元素增减移动
+
+获取元素位置、宽高的一些手段都会导致 reflow，不存在绕过一说，因为只要获取这些信息，都必须 reflow 才能给出准确的值。
+
+**滚动**
+* elem.scrollBy(), elem.scrollTo()
+* elem.scrollIntoView(), elem.scrollIntoViewIfNeeded()
+* elem.scrollWidth, elem.scrollHeight
+* elem.scrollLeft, elem.scrollTop 访问及赋值
+
+对 scrollLeft 赋值等价于触发 scrollTo，所有导致滚动产生的行为都会触发 reflow
+
+**一些其他 element API**：
+* elem.focus() (源码)
+* elem.computedRole, elem.computedName
+* elem.innerText (源码)
+* inputElem.select()
+* textareaElem.select()
+
+**获取 window 信息**
+* window.scrollX, window.scrollY
+* window.innerHeight, window.innerWidth
+* window.visualViewport.height / width / offsetTop / offsetLeft (源码)
+
+和元素级别一样，为了拿到正确宽高和位置信息，必须重排。
+
+**document 相关**
+* document.scrollingElement 仅重绘
+* document.elementFromPoint
+
+elementFromPoint 因为要拿到精确位置的元素，必须重排。
+
+**鼠标事件相关**
+* mouseEvt.layerX, mouseEvt.layerY, mouseEvt.offsetX, mouseEvt.offsetY (源码)
+
+鼠标相关位置计算，必须依赖一个正确的排布，所以必须触发 reflow。
+
+**Range 相关**
+* range.getClientRects(), range.getBoundingClientRect()
+
+获取选中区域的大小，必须 reflow 才能保障精确性。
+
+**SVG**
+* 大量 SVG 方法会引发重排，就不一一枚举了，总之使用 SVG 操作时也要像操作 dom 一样谨慎。
+
+**contenteditable**
+* 被设置为 contenteditable 的元素内，包括将图像复制到剪贴板在内，大量操作都会导致重排。(源码)
+
+##### 实践
+现代浏览器会将多次 dom 操作合并，但像 IE 等其他内核浏览器就不保证有这样的实现了，因此给出了一个安全写法：
+
+1. 不要一个属性一个属性的修改，用一次 className 的修改，或一次 cssText 的修改保证浏览器一定触发一次重排。
+
+但这样可维护性会降低很多，不太推荐。
+
+2. 读写分离
+
+```javascript
+function resizep () {
+  for (var i = 0; i < p.length; i++) {
+    p[i].style.width = box.offsetWidth + 'px';
+  }
+}
+```
+
+在 for 循环中不断访问元素宽度，并修改其宽度，会导致浏览器执行 N 次 reflow。
+
+虽然当 JavaScript 运行时，前一帧中的所有旧布局值都是已知的，但当你对布局做了修改后，前一帧所有布局值缓存都会作废，因此当下次获取值时，不得不重新触发一次 reflow。
+
+而读写分离的话，就代表了集中读，虽然读的次数还是那么多，但从第二次开始就可以从布局缓存中拿数据，不用触发 reflow 了。
+
+相关库：fastdom
+
+3. flex 布局比传统 float 重排速度快很多
 
 重绘是重新绘制元素。当 DOM 的修改导致了样式的变化，并且没有影响几何属性的时候，会导致重绘(repaint)。当发生重绘的时候，会跳过生成布局树和建立图层树的阶段，直接绘制。
 
