--- a/_posts/JavaScript/事件/2023-1-10-鼠标拖放.md
+++ b/_posts/JavaScript/事件/2023-1-10-鼠标拖放.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      鼠标拖拽
+title:      鼠标拖放
 subtitle:   
 date:       2023-1-10
 author:     
@@ -33,43 +33,55 @@ iframe {
 ```
 
 例子：
-```javascript
-elem.onmousedown = function (event) {
-  const shiftX = event.clientX - elem.getBoundingClientRect().left;
-  const shiftY = event.clientY - elem.getBoundingClientRect().top;
-  
-  elem.style.position = 'absolute';
-  elem.style.zIndex = 1000;
-  document.body.append(ball);
-  
-  moveAt(event.pageX, event.pageY);
-  
-  function moveAt (pageX, pageY) {
-    elem.style.left = pageX - shiftX + 'px';
-    elem.style.top = pageY - shiftY + 'px';
-  }
-  
-  function onMouseMove (event) {
-    moveAt(event.pageX, event.pageY);
-  }
-  
-  document.addEventListener('mousemove', onMouseMove);
-  
-  elem.onmouseup = function () {
-    document.removeEventListener('mousemove', onMouseMove);
-    elem.onmouseup = null;
-  }
-};
 
-elem.ondragestart = function () {
-  return false;
-};
+```html
+<!doctype html>
+<html lang="en">
+<head>
+    <title></title>
+</head>
+<body>
+<div id="elem"></div>
+<script>
+    elem.onmousedown = function (event) {
+        const shiftX = event.clientX - elem.getBoundingClientRect().left;
+        const shiftY = event.clientY - elem.getBoundingClientRect().top;
+
+        elem.style.position = 'absolute';
+        elem.style.zIndex = 1000;
+        document.body.append(ball);
+
+        moveAt(event.pageX, event.pageY);
+
+        function moveAt(pageX, pageY) {
+            elem.style.left = pageX - shiftX + 'px';
+            elem.style.top = pageY - shiftY + 'px';
+        }
+
+        function onMouseMove(event) {
+            moveAt(event.pageX, event.pageY);
+        }
+
+        document.addEventListener('mousemove', onMouseMove);
+
+        elem.onmouseup = function () {
+            document.removeEventListener('mousemove', onMouseMove);
+            elem.onmouseup = null;
+        }
+    };
+
+    elem.ondragestart = function () {
+        return false;
+    };
+</script>
+</body>
+</html>
 ```
 
 ## 鼠标事件中拿到当前顶层元素
-鼠标事件只发生在最顶层元素上，被遮挡的元素无法触发，那么在 mousemove 事件中，我们无法判断是否拖动到了可拖放区域。
+鼠标事件只发生在最顶层元素上，被遮挡的元素无法触发。当我们拖动时，可拖动元素一直是位于其他元素上的。那么在 mousemove 事件中，我们无法判断是否拖动到了可拖放区域。
 
-解决方法时可以先将当前拖拽元素隐藏，然后调用 document.elementFromPoint(clientX, clientY)，拿到最上层元素后，再显示当前拖拽元素。
+解决方法是可以在需要判断是否拖拽到可拖放区域时，先将当前拖拽元素隐藏，然后调用 document.elementFromPoint(clientX, clientY)，拿到最上层元素后，再显示当前拖拽元素。
 
 因此我们修改 onMouseMove 方法：
 ```javascript
