--- a/_posts/微信/2022-11-07-小程序指南.md
+++ b/_posts/微信/2022-11-07-小程序指南.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      小程序查漏补缺
+title:      小程序指南
 subtitle:   
 date:       2022-11-06
 author:     
@@ -11,34 +11,6 @@ tags:
 ---
 # 小程序
 ## 指南
-### 小程序注册
-[小程序注册页](https://mp.weixin.qq.com/wxopen/waregister?action=step1)，注册后在后台能拿到小程序的AppID。
-
-小程序的 AppID 相当于小程序平台的一个身份证，和服务号或订阅号的 AppID有区别。
-
-### 环境
-小程序的运行环境分成渲染层和逻辑层，其中 WXML 模板和 WXSS 样式工作在渲染层，JS 脚本工作在逻辑层。
-
-小程序的渲染层和逻辑层分别由2个线程管理：渲染层的界面使用了WebView 进行渲染；逻辑层采用 JsCore 线程运行 JS 脚本。
-
-一个小程序存在多个界面，所以渲染层存在多个 WebView 线程，这两个线程的通信会经由微信客户端做中转，逻辑层发送网络请求也经由 Native 转发。
-
-开启ES6转ES5和样式补全，因为各平台[运行环境](https://developers.weixin.qq.com/miniprogram/dev/framework/runtime/env.html)不同，导致有部分差异，具体表现以客户端为准。
-
-### 代码构成
-app.json的pages字段定义页面路径，文件夹中包含wxss、wxml、js和json文件
-
-#### JSON
-在小程序中，JSON文件属于配置文件。
-1. 全局配置app.json 。app.json 是当前小程序的全局配置，包括了小程序的所有页面路径、界面表现、网络超时时间、底部 tab 等。
-
-[全局配置项](https://developers.weixin.qq.com/miniprogram/dev/reference/configuration/app.html)
-2. 工具配置 project.config.json 。小程序开发者工具在每个项目的根目录都会生成一个 project.config.json，其中会包括编辑器的颜色、代码上传时自动压缩等等一系列选项
-
-[开发者工具配置](https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html)
-3. 页面配置page.json 。page.json让开发者可以独立定义每个页面的一些属性，覆盖app.json中的配置。
-
-[页面配置](https://developers.weixin.qq.com/miniprogram/dev/reference/configuration/page.html)
 
 #### 获取节点信息
 [节点信息查询和布局相交状态](https://developers.weixin.qq.com/miniprogram/dev/framework/view/selector.html)
@@ -687,3 +659,63 @@ https://developers.weixin.qq.com/miniprogram/dev/reference/wxs/07basiclibrary.ht
 - skyline渲染引擎
 - 从插件开始没看
 - replaceDataOnPath 和 applyDataUpdates 方法。https://developers.weixin.qq.com/miniprogram/dev/reference/api/Component.html
+
+
+## 指南
+### 小程序注册
+[小程序注册页](https://mp.weixin.qq.com/wxopen/waregister?action=step1)，注册后在后台能拿到小程序的AppID。
+
+小程序的 AppID 相当于小程序平台的一个身份证，和服务号或订阅号的 AppID有区别。
+
+### 代码构成
+页面由四个类型的文件构成 json，wxss，wxml 和 js。
+
+json 文件属于配置文件，定义了全局范围（或页面范围）界面表现、网络超时时间、底部 tab 等。
+
+js 文件是写生命周期方法，模板所使用的方法的地方。
+
+wxss 定义全局或页面样式。
+
+wxml 编写页面 html。
+
+在项目根目录下，app.json, app.wxss 和 app.js 文件影响全局。每个页面也有对应的 json，js，wxml 和 wxss 文件。
+
+#### 一些特殊文件
+工具配置 project.config.json 。小程序开发者工具在每个项目的根目录都会生成一个 project.config.json，其中会包括编辑器的颜色、代码上传时
+自动压缩等等一系列[选项](https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html)。
+
+页面配置 page.json。page.json让开发者可以独立定义每个页面的一些属性，覆盖app.json中的[配置](https://developers.weixin.qq.com/miniprogram/dev/reference/)。
+
+小程序添加新页面需要在 page.json 的 pages 字段添加对应页面文件夹的路径。
+
+### 获取节点信息
+`wx.createSelectorQuery` 可以用于获取节点属性、样式、在界面上的位置等信息。
+
+常见例子：
+```javascript
+const query = wx.createSelectorQuery()
+query.select('#the-id').boundingClientRect(function(res){
+  res.top
+})
+query.selectViewport().scrollOffset(function(res){
+  res.scrollTop
+})
+query.exec()
+```
+
+selectorQuery 实例对象的 `select` 方法接收选择器，返回在当前页面下选择第一个匹配选择器 selector 的节点 - [NodesRef](https://developers.weixin.qq.com/miniprogram/dev/api/wxml/NodesRef.html)。
+`NodesRef` 有相应获取几何属性和位置的方法。
+
+`select` 方法支持以下选择器：ID选择器 ，class选择器（可以连续指定多个） ，子元素选择器 ，后代选择器 ，跨自定义组件的后代选择器 ，多选择器的并集
+
+注意：在自定义组件或包含自定义组件的页面中，推荐使用 this.createSelectorQuery 来代替 wx.createSelectorQuery ，这样可以确保在正确的范围内选择节点。
+
+## 深入
+### 小程序运行环境
+小程序的运行环境分成渲染层和逻辑层，其中 WXML 模板和 WXSS 样式工作在渲染层，JS 脚本工作在逻辑层。
+
+小程序的渲染层和逻辑层分别由2个线程管理：渲染层的界面使用了WebView 进行渲染；逻辑层采用 JsCore 线程运行 JS 脚本。
+
+一个小程序存在多个界面，所以渲染层存在多个 WebView 线程，这两个线程的通信会经由微信客户端做中转，逻辑层发送网络请求也经由 Native 转发。
+
+开启ES6转ES5和样式补全，因为各平台[运行环境](https://developers.weixin.qq.com/miniprogram/dev/framework/runtime/env.html)不同，导致有部分差异，具体表现以客户端为准。
