--- a/_posts/浏览器/2023-2-1-事件循环.md
+++ b/_posts/浏览器/2023-2-1-事件循环.md
@@ -8,8 +8,6 @@ header-img:
 catalog: true
 tags:
     - 事件循环
-    - 宏任务
-    - 微任务
 ---
 # 事件循环
 它是一个在 JavaScript 引擎等待任务，执行任务和进入休眠状态等待更多任务这几个状态之间转换的无限循环。
@@ -55,6 +53,6 @@ Web Workers 没有访问 DOM 的权限，因此，它们对同时使用多个 CP
 2. 执行所有 微任务：
    - 当微任务队列非空时：
      - 出队（dequeue）并执行最早的微任务。
-3. 如果有变更，则将变更渲染出来。
+3. 如果有 DOM 变更，则将变更渲染出来。
 4. 如果宏任务队列为空，则休眠直到出现宏任务。
 5. 转到步骤 1。
